# service

./: .env  .env.example  .gitignore  BUILD.md  Cargo.toml  README.md  build-linux.ps1  build-release.bat  build-release.ps1  build-release.sh
.github/workflows/: github.yaml
android/: .gitignore  build.gradle.kts  gradlew  local.properties.example  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro  release-keystore.jks  release-keystore.jks.b64
android/shared/: build.gradle.kts
ios/iosApp/: App.swift  ContentView.swift  Info.plist  MainViewController.kt
ios/iosApp.xcodeproj/: project.pbxproj
migrations/: 20241118000001_add_user_plates.sql  20241125000001_create_notifications.sql  20251229000001_add_departure_time_and_push_token.sql  20251230000002_add_phone_hash.sql  20260101000003_add_blocker_plate_to_blocks.sql  20260102000001_change_blocks_to_plate_based.sql
release/migrations/: 20241117000001_init.sql  20241118000002_add_owner_fields.sql  20241124000001_update_show_contacts_default.sql
src/: config.rs  error.rs  lib.rs  main.rs  openapi.rs
src/api/: app_download.rs  auth.rs  block.rs  mod.rs  notification.rs  ocr.rs  server_info.rs  user.rs  user_plate.rs
src/auth/: jwt.rs  middleware.rs  mod.rs  sms.rs
src/db/: init.rs  mod.rs  pool.rs
src/middleware/: logging.rs  mod.rs
src/models/: auth.rs  block.rs  mod.rs  notification.rs  user.rs  user_plate.rs
src/repository/: block_repository.rs  mod.rs  notification_repository.rs  telegram_bot_repository.rs  user_plate_repository.rs  user_repository.rs
src/service/: auth_service.rs  block_service.rs  mod.rs  push_service.rs  telegram_service.rs  telephony_service.rs  user_service.rs  validation_service.rs
src/utils/: mod.rs  (+5 more)
(+52 files in other folders)
