[package]
name = "rimskiy_service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }


# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication & Security
jsonwebtoken = "9.2"
bcrypt = "0.15"
aes-gcm = "0.10"
rand = "0.8"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
validator = { version = "0.18", features = ["derive"] }
hex = "0.4"
base64 = { version = "0.21", features = ["alloc"] }
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
teloxide = { version = "0.12", features = ["macros", "ctrlc_handler"] }

# Environment variables
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async traits
async-trait = "0.1"

# OpenAPI/Swagger
utoipa = { version = "4.2", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }

[[bin]]
name = "rimskiy_service"
path = "src/main.rs"

[[bin]]
name = "telegram_bot"
path = "src/bin/telegram_bot.rs"

[profile.release]
opt-level = "z"      # Оптимизация по размеру
lto = true          # Link-time optimization
strip = true        # Удаление отладочной информации
codegen-units = 1   # Лучшая оптимизация
